--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<title>d3-shot-chart</title>
 
 	<link rel="stylesheet" type="text/css" href="index.css">
+		<link rel="stylesheet" type="text/css" href="shots.css">
+
 
 </head>
 
@@ -13,32 +15,30 @@
 
 	<!-- Center shot chart inside the containe -->
 	<div class="container">
-		<div class="shotchart-border"></div>	
-		<div class="shotchart-no-border"></div>	
+		<div class="shotchart"></div>	
 	</div>
 
 
 	<!-- d3.js -->
 	<script src="https://d3js.org/d3.v5.min.js"></script>
 	<script src="d3-shot-chart.js"></script>
+	<script src="shots.js"></script>
 
 	<script>
+
 		 // draw the court. currently width set at 600
-		var courtDiv1 = d3.select(".shotchart-border");
-		var courtSVG1 = courtDiv1.append("svg")
-						.attr("width", WIDTH)
-						.attr("height", HEIGHT);
-
-		var courtDiv2 = d3.select(".shotchart-no-border");
-		var courtSVG2 = courtDiv2.append("svg")
+		var courtDiv = d3.select(".shotchart");
+		var courtSVG = courtDiv.append("svg")
 						.attr("width", WIDTH)
 						.attr("height", HEIGHT);
 
 
-		// draw court with and without border
-		draw_mens_ncaa(courtSVG1);
-		draw_mens_ncaa(courtSVG2, false);
 
+		// draw court with aborder
+		draw_mens_ncaa(courtSVG);
+
+		// register shots when clicked.
+		register_shots(courtSVG, WIDTH, HEIGHT);
 	</script>
 
 </body>
