undo and clear shot buttons added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 	<title>d3-shot-chart</title>
 
 	<link rel="stylesheet" type="text/css" href="index.css">
-		<link rel="stylesheet" type="text/css" href="shots.css">
+	<link rel="stylesheet" type="text/css" href="shots.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
 
 
 </head>
@@ -15,7 +17,11 @@
 
 	<!-- Center shot chart inside the containe -->
 	<div class="container">
-		<div class="shotchart"></div>	
+		<div class="shotchart-controls">
+			<button type="button" class="btn btn-primary" onclick="undo_shot()">Undo</button>
+			<button type="button" class="btn btn-primary" onclick="clear_shots()">Clear</button>
+		</div>
+		<div class="shotchart"></div>
 	</div>
 
 
@@ -27,10 +33,11 @@
 	<script>
 
 		// draw court with specified width
-		draw_mens_ncaa(400);
+		draw_mens_ncaa(600);
 
-		// register shots w3en clicked.
-		// register_shots(courtSVG, WIDTH, HEIGHT);
+		var court = d3.select("svg");
+		register_shots(court);
+
 	</script>
 
 </body>
