--- a/index.html
+++ b/index.html
@@ -14,21 +14,59 @@
 </head>
 
 <body>
+	<div class='container'>
 
-	<!-- Center shot chart inside the containe -->
-	<div class="container">
-		<div class="shotchart-controls">
-			<button type="button" class="btn btn-primary" onclick="undo_shot()">Undo</button>
-			<button type="button" class="btn btn-primary" onclick="clear_shots()">Clear</button>
+		<div class='player-container p-3'>
+			<div class="player-card" onclick="player_clicked(this);">
+				<div>
+					<h5 class="name">Player 1</h5>
+				</div>
+			</div>
+			<div class="player-card" onclick="player_clicked(this);">
+				<div>
+					<h5 class="name">Player 2</h5>
+				</div>
+			</div>
+			<div class="player-card" onclick="player_clicked(this);">
+				<div>
+					<h5 class="name">Player 3</h5>
+				</div>
+			</div>
+			<div class="player-card" onclick="player_clicked(this);">
+				<div>
+					<h5 class="name">Player 4</h5>
+				</div>
+			</div>
+			<div class="player-card" onclick="player_clicked(this);">
+				<div>
+					<h5 class="name">Player 5</h5>
+				</div>
+			</div>
 		</div>
 		<div class="shotchart"></div>
+		<div class="shot-container p-3">
+			<div class="shotchart-controls">
+				<button type="button" class="btn btn-primary" onclick="undo_shot()">Undo</button>
+				<button type="button" class="btn btn-primary" onclick="clear_shots()">Clear</button>
+			</div>
+		</div>
+
 	</div>
 
+	<div class="container2">
+<!-- 		<p class="shot-record">player 1 shot 3</p>
+		<p class="shot-record">player 2 shot 4</p>
+		<p class="shot-record">player 3 shot 6</p> -->
+	</div>
 
 	<!-- d3.js -->
 	<script src="https://d3js.org/d3.v5.min.js"></script>
 	<script src="d3-shot-chart.js"></script>
+	<!-- <script src="players.js"></script> -->
 	<script src="shots.js"></script>
+
+	<!-- jquery -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 	<script>
 
